package com.exemplo;

public class Baralho {
    
}
