package com.exemplo;

public class Blackjack {
    public static void main(String[] args) {
        
    }
}
