package com.exemplo;

public class Carta {

}
