package com.exemplo;

public class Deck {

}
