package com.exemplo;

public class Jogador {

}
