package com.exemplo;

public enum Naipe {
	COPAS,
	PAUS,
	ESPADAS,
	OUROS
}
