package com.exemplo;

public enum ValorCarta {

}
