@startuml

enum Naipe {
    COPAS,PAUS,ESPADAS,OUROS
}

enum ValorCarta {
    AS,DOIS,TRES,QUATRO,CINCO,SEIS,SETE,OITO,NOVE,DEZ,VALETE,DAMA,REI
}

class Carta {
    - naipe:Naipe
    - valor:ValorCarta
}

class Baralho {
    + inicializa():
    + embaralha():
    + pegaDeCima():Carta
}

class Deck {
    + adicionaCarta(Carta carta):
    + soma():int
    + limpa():
}

class Jogador {
    - nome:String
    - deck:Deck
}

class Blackjack {
    - baralho:Baralho
    - jogador1:Jogador
    - jogador2:Jogador
    + iniciarJogo():
    + pedeCarta(jogador:Jogador)
    + passaVez(jogador:Jogador)
    + verificaVencedor():Jogador
}

Carta ..> Naipe
Carta ..> ValorCarta
Baralho "1" --> "52" Carta
Deck "1" --> "*" Carta
Jogador "1" --> "1" Deck
Blackjack "1" --> "2" Jogador
Blackjack "1" --> "1" Baralho

@enduml
